syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.github.hummel.mpp.lab6.grpc";
option java_outer_classname = "EntryPoint";

package helloworld;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}